@@ -1,6 +1,7 @@
 v0.4.x  --  2015.03.20
 * Added support to nested styles
 * Added support to `.trim()` and `.throbber()` directly from `cli-color`, without require an internal module
+* Added module `.art()`
 * Improved `.trim()` Regular Expression to remove all control sequence
 * Improved `.width()`, `.height()` and `.reset()` methods
 
